--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="d-flex justify-content-between topbar">
                     <div class="top-info">
-                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-map-marker-alt me-2 text-secondary"></i></a>42, Murtala Mohammed Highway, Calabar,Nigeria </small>
+                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-map-marker-alt me-2 text-secondary"></i></a>42, M/M Hway, Cal, Nig. </small>
                         <small class="me-3 text-white-50"><a href="#"><i class="fas fa-envelope me-2 text-secondary"></i></a>info@cerebrum-ip.com</small>
                     </div>
                     <div id="note" class="text-secondary d-none d-xl-flex"><small>Note : We help you to Birth and Transform that Idea into an Intellectual Property</small></div>
@@ -117,14 +117,7 @@
         <div class="container-fluid page-header py-5">
             <div class="container text-center py-5">
                 <h1 class="display-2 text-white mb-4 animated slideInDown">Contact Us</h1>
-                <nav aria-label="breadcrumb animated slideInDown">
-                    <ol class="breadcrumb justify-content-center mb-0">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item" aria-current="page">Contact</li>
-                    </ol>
-                </nav>
-            </div>
+                            </div>
         </div>
         <!-- Page Header End -->
 
@@ -180,7 +173,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h4 class="text-primary">Address</h4>
-                                    <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">23 rank Str, NY</a>
+                                    <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">42, M/M Hway,Cal</a>
                                 </div>
                             </div>
                         </div>
@@ -191,7 +184,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h4 class="text-primary">Call Us</h4>
-                                    <a class="h5" href="tel:+0123456789" target="_blank">+012 3456 7890</a>
+                                    <a class="h5" href="tel:+2348183798063" target="_blank">+234 8183798063</a>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +195,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h4 class="text-primary">Email Us</h4>
-                                    <a class="h5" href="mailto:info@example.com" target="_blank">info@example.com</a>
+                                    <a class="h5" href="mailto:info@cerebrumip.com" target="_blank">info@cerebrumip.com</a>
                                 </div>
                             </div>
                         </div>
