--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@
         </div>
         <!-- Spinner End -->
 
-        <!-- Topbar Start -->
+                <!-- Topbar Start -->
         <div class="container-fluid bg-dark py-2 d-none d-md-flex">
             <div class="container">
                 <div class="d-flex justify-content-between topbar">
                     <div class="top-info">
-                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-map-marker-alt me-2 text-secondary"></i></a>42, Murtala Mohammed Highway, Calabar,Nigeria </small>
-                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-envelope me-2 text-secondary"></i></a>info@intforge.com</small>
+                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-map-marker-alt me-2 text-secondary"></i></a>42, M/M Hway, Cal, Nig. </small>
+                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-envelope me-2 text-secondary"></i></a>info@cerebrum-ip.com</small>
                     </div>
                     <div id="note" class="text-secondary d-none d-xl-flex"><small>Note : We help you to Birth and Transform that Idea into an Intellectual Property</small></div>
                     <div class="top-link">
@@ -119,13 +119,7 @@
         <div class="container-fluid page-header py-5">
             <div class="container text-center py-5">
                 <h1 class="display-2 text-white mb-4 animated slideInDown">About Us</h1>
-                <nav aria-label="breadcrumb animated slideInDown">
-                    <ol class="breadcrumb justify-content-center mb-0">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item" aria-current="page">About</li>
-                    </ol>
-                </nav>
+
             </div>
         </div>
         <!-- Page Header End -->
@@ -177,8 +171,13 @@
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                         <h5 class="text-primary">About Us</h5>
                         <h1 class="mb-4">About Cerebrum IP Solutions Ltd </h1>
-                        <p>At Cerebrum IP Solutions Ltd, we are reimagining the future of ideas, innovation, and economic transformation.
-Through our flagship platforms—IntelliForge, ForgeAI Omega, and PSP (Prism Social Pro)—we provide the world’s first integrated ecosystem that transforms raw ideas into global impact.
+                        <p>Cerebrum IP Solutions Ltd is a visionary innovation catalyst, dedicated to transforming the landscape of intellectual property and invention across Africa and the globe. We are architects of potential, building bridges between raw creativity and global commercial success. Our mission is to find, nurture, and empower innovators wherever they are—from the bustling tech hubs to the overlooked genius in underserved communities. 
+<br>	We recognize that the world's most groundbreaking ideas often lack the resources or guidance to flourish. That's why we've built a comprehensive, technology-driven ecosystem designed to demystify and streamline the entire journey from a mere thought to a tangible, market-ready asset. Beyond traditional IP consulting, we develop cutting-edge digital platforms and software that allow innovators to document, process, and refine their inventions, making the complex simple and accessible.
+<br>	At our core, we are a social enterprise with a global ambition. We are committed to raising innovators from the slums, equipping them with not just legal protection, but also the technical know-how, business acumen, and market access to build economically viable assets that address pressing global challenges. We believe that innovation is the most powerful currency for change, and our purpose is to ensure it is distributed equitably.
+<br>	By combining state-of-the-art technology with deep expertise, ethical practice, and a passion for sustainable growth, we don't just protect ideas—we launch legacies. We are the partner for those who dare to invent, create, and redefine the future.
+
+At Cerebrum IP Solutions Ltd, we are reimagining the future of ideas, innovation, and economic transformation.
+<br> 	Through our flagship platforms—IntelliForge, ForgeAI Omega, and PSP (Prism Social Pro)—we provide the world’s first integrated ecosystem that transforms raw ideas into global impact.
 <br>•	IntelliForge: The universal hub for idea harvesting, IP incubation, legal innovation, and business rebirth through 24+ specialized dashboards and the legendary Crown Jewels.
 <br>•	ForgeAI Omega: Our advanced AI engine that powers predictive intelligence, Validator loops, governance automation, and sovereign-scale economic forecasting.
 <br>•	PSP (Prism Social Pro): A unified social and blockchain platform where creativity, knowledge, wellness, governance, and payments converge.
@@ -231,8 +230,27 @@ Our mission is simple yet bold:
                                     <img src="img/team-2.jpg" class="img-fluid w-100 rounded-circle" alt="">
                                 </div>
                                 <div class="team-name text-center py-3">
-                                    <h4 class="">Patrick Gabriel</h4>
+                                    <h4 class="">Fred O. Ngawala</h4>
                                     <p class="m-0">Marketing, South South, Nigeria</p>
+                                </div>
+                                <div class="team-icon d-flex justify-content-center pb-4">
+                                    <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					 <div class="rounded team-item">
+                        <div class="team-content">
+                            <div class="team-img-icon">
+                                <div class="team-img rounded-circle">
+                                    <img src="img/team-3.jpg" class="img-fluid w-100 rounded-circle" alt="">
+                                </div>
+                                <div class="team-name text-center py-3">
+                                    <h4 class="">Patrick Gabriel</h4>
+                                    <p class="m-0">Public Relations, Cross River State, Nigeria</p>
                                 </div>
                                 <div class="team-icon d-flex justify-content-center pb-4">
                                     <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -247,7 +265,7 @@ Our mission is simple yet bold:
                         <div class="team-content">
                             <div class="team-img-icon">
                                 <div class="team-img rounded-circle">
-                                    <img src="img/team-3.jpg" class="img-fluid w-100 rounded-circle" alt="">
+                                    <img src="img/team-7.jpg" class="img-fluid w-100 rounded-circle" alt="">
                                 </div>
                                 <div class="team-name text-center py-3">
                                     <h4 class="">Etekpi K. Okpan</h4>
@@ -287,7 +305,7 @@ Our mission is simple yet bold:
         <!-- Team End -->
 
 
-          <!-- Footer Start -->
+ <!-- Footer Start -->
          <div class="container-fluid footer bg-dark wow fadeIn" data-wow-delay=".3s">
             <div class="container pt-5 pb-4">
                 <div class="row g-5">
@@ -306,21 +324,21 @@ Our mission is simple yet bold:
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Corporate Info</a>
                         <div class="mt-4 d-flex flex-column short-link">
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>About us</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Services</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Projects</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
+                            <a href="about.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>About us</a>
+                            <a href="contact.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
+                            <a href="#" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Services</a>
+                            <a href="project.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our Projects</a>
+                            <a href="#" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>News & Updates</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Quick Help</a>
                         <div class="mt-4 d-flex flex-column help-link">
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Terms Of use</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Privacy Policy</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Helps</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>FQAs</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact</a>
+                            <a href="terms.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Terms Of use</a>
+                            <a href="#" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Privacy Policy</a>
+                            <a href="#" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Helps</a>
+                            <a href="#" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>FQAs</a>
+                            <a href="contact.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -328,14 +346,14 @@ Our mission is simple yet bold:
                         <div class="text-white mt-4 d-flex flex-column contact-link">
                             <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> 42, Murtala Mohammed Highway, Calabar, Cross River State, Nigeria</a>
                             <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +23481 837 98063</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i> info@ibank25.com</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i> info@cerebrumip.com</a>
                         </div>
                     </div>
                 </div>
                 <hr class="text-light mt-5 mb-4">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start">
-                        <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Cerebrum IP Solutions Ltd</a>, All right reserved.</span>
+                        <span class="text-light"><a href="index.html" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Cerebrum IP Solutions Ltd</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
